--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=7.0",
         "viviniko/repository": "dev-master",
-        "viviniko/support": "dev-master",
-        "viviniko/urlrewrite": "dev-master"
+        "viviniko/support": "dev-master"
+
     },
     "autoload": {
         "psr-0": {
